package com.sda.patterns.structural.adapter.ex3;

public class Duster implements Movable {

	@Override
	public double getSpeed() {
		return 160;
	}
}
