package com.sda.patterns.structural.adapter.ex3;

public interface Movable {

	// returns speed in MPH
	double getSpeed();
}